--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div class="header">
 		<div class="headerContent">
 		<img src="images/sitelogo.png" alt="Willlogo"/>
-		<div style="text-align:center;"><script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/23749-8-5.js"></script></div><a href="http://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free"><img src="http://www.webestools.com/images/ban03.gif" alt="Tools services webmasters counters generators scripts tutorials free" /></a>
+		<div style="text-align:center;"><script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/23749-8-5.js"></script></div><a href="http://www.webestools.com/" style="display:block;text-align:center;" title="Tools services webmasters counters generators scripts tutorials free">
 			
 	
 	<div class="nav">
