--- a/mods.html
+++ b/mods.html
@@ -30,7 +30,7 @@
 	</div>
 </div>
 
-<div class="content1">
+<div class="content2">
 
 <div id="mods">
 <h1>Mischievous Night - BETA</h1>
@@ -56,6 +56,21 @@
 	</ul>
 		<hr class="colorhr">
 	
+<h1>Teleportation Cheat Code CLEO Script for GTA SA</h1>
+	<p>Teleports the player to either LS, SF, LV, Tierra Robada or Whetstone by entering cheatcodes, works only outside.</p>
+	<ul>
+	<li>v.0.1 - Released</li>
+	<li>Las Venturas Cheat Code: VENTURASHEREICOME</li>
+	<li>San Fierro Cheat Code: FIERROHEREICOME</li>
+	<li>Los Santos Cheat Code: SANTOSHEREICOME</li>
+	<li>Tierra Robada Cheat Code: TIERRAHEREICOME</li>
+	<li>Whetstone Cheat Code: COUNTRYHEREICOME</li>
+	<br>
+		<img src="images/cheat.png" alt="cheatcode" height="450" width="720"/>
+		</ul>
+
+	<div id="button3"><button type="button" style="position: absolute; right: 20px;" class="myButton"><a href="https://www.dropbox.com/s/yw1cpk846sqgea9/MyCheatCodes.cs?dl=0">Download Me!</a></button></div>
+		<hr class="colorhr">
 	</div>		
 		
 </div>
