--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 
 <head>
 <title>Will-Stuff</title>
+
+<meta charset="UTF-8">
+<meta name="description" content="Mods for The Simpsons: Hit & Run, GTA San Andreas and more!">
+<meta name="keywords" content="Will Stuff Will-Stuff Github io GTA SA modding Mischievous night the simpsons hit and run">
+<meta name="author" content="William Johnson">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">	
+	
 <link rel="icon" href="icon.png">
 <link rel="stylesheet" href="css/button.css"/>
 <link rel="stylesheet" href="css/styles.css"/>
-	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
+	
 </head>
 
 <script>
