--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<div id="navpanel">
 		<li><a href="index.html">H O M E</a></li>
 		<li><a href="mods.html">M O D S</a></li>
-		<li><a href="tutorials.html">T U T O R I A L S</a></li>
+		<li style="color: black;">T U T O R I A L S - COMING SOON</li>
 		</div>
 			</strong>
 		</ul>
