--- a/mods.html
+++ b/mods.html
@@ -13,7 +13,7 @@
 
 	<div class="header">
 		<div class="headerContent">
-		<img src="images/sitelogo.png" alt="DarkeComplexlogo"/>
+		<img src="images/sitelogo.png" alt="willlogo"/>
 	
 	<div class="nav">
 		<ul>
@@ -21,9 +21,8 @@
 	<div id="navpanel">
 		<li><a href="index.html">H O M E</a></li>
 		<li><a href="mods.html">M O D S</a></li>
-		<li><a href="tutorials.html">T U T O R I A L S</a></li>
+		<li style="color: black;">T U T O R I A L S - COMING SOON</li>
 		</div>
-			</strong>
 		</ul>
 	</div>
 	</div>
