--- a/mods.html
+++ b/mods.html
@@ -22,6 +22,7 @@
 		<li><a href="index.html">H O M E</a></li>
 		<li><a href="mods.html">M O D S</a></li>
 		<li style="color: black;">T U T O R I A L S - COMING SOON</li>
+		</strong>
 		</div>
 		</ul>
 	</div>
