--- a/mods.html
+++ b/mods.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html> <!-- Designed by Will Johnson, 2016 -->
 
 <head>
 <title>Will-Stuff - Mods</title>
 	<link rel="icon" href="icon.png">
+	<meta charset="UTF-8">
 	<link rel="stylesheet" href="css/button.css"/>
 <link rel="stylesheet" href="css/styles.css"/> <!-- Stylesheets -->
 	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
