--- a/mods.html
+++ b/mods.html
@@ -10,7 +10,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
 </head>
 	
-<body background="images/bgtile.jpg">
+<body>
 	<div id="wrapper">
 
 	<div class="header">
@@ -18,8 +18,9 @@
 		<img src="images/sitelogo.png" alt="willlogo"/>
 	
 	<div class="nav">
+				<strong>
 		<ul>
-		<strong>
+
 	<div id="navpanel">
 		<li><a href="index.html">H O M E</a></li>
 		<li><a href="mods.html">M O D S</a></li>
