--- a/index.html
+++ b/index.html
@@ -36,18 +36,16 @@
 
 
 	
-<body background="images/bgtile.jpg" onload="Time()">
-
+<body onload="Time()">
 
 	<div id="wrapper">
 	<div class="header">
 		<div class="headerContent">
 		<img src="images/sitelogo.png" alt="Willlogo"/>
-			
 	
 	<div class="nav">
+				<strong>
 		<ul>
-		<strong>
 	<div id="navpanel">
 		<li><a href="index.html">H O M E</a></li>
 		<li><a href="mods.html">M O D S</a></li>
@@ -79,10 +77,24 @@
 		<h1>Why have i made this site?</h1>
 		<hr>
 		<p style="text-align: center;">I like toying with HTML, and CSS a lot. So making websites I find rather fun. I made this site also to share some of my creations, i'll be posting CLEO scripts, SHAR (Simpsons Hit and Run) mods, and all kinds of cool shit. I'm also studying web development a little myself so pushing some of my creative projects into my websites i make kinda works i guess, atleast it makes the pages less empty hahaha</p>
-		</div>	
+		<div id="css-seal">
+		<p>
+			<a href="http://jigsaw.w3.org/css-validator/check/referer">
+    	<img style="border:0;width:88px;height:31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Valid CSS!" />
+    	</a>
+		</p></div>
 		
-</div>
+		<div id="footerbanner">
+			<img src="images/footerbanner.png" alt="footbanner"/>
+		</div>
+		</div>	
 
+
+
+</div>
+	
 <footer>
 	
 	<div class="footer">
