--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<!DOCTYPE html>
 <html> <!-- Designed by Will Johnson, 2016 -->
 
 <head>
@@ -43,14 +45,13 @@
 		<img src="images/sitelogo.png" alt="Willlogo"/>
 	
 	<div class="nav">
-				<strong>
 		<ul>
 	<div id="navpanel">
-		<li><a href="index.html">H O M E</a></li>
-		<li><a href="mods.html">M O D S</a></li>
-		<li style="color: black;">T U T O R I A L S - COMING SOON</li>
+		<li><a href="index.html"><strong>H O M E</strong></a></li>
+		<li><a href="mods.html"><strong>M O D S</strong></a></li>
+		<li style="color: black;"><strong>T U T O R I A L S - COMING SOON</strong></li>
 		</div>
-			</strong>
+			
 		</ul>
 	</div>
 	</div>
