--- a/mods.html
+++ b/mods.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html> <!-- Designed by Will Johnson, 2016 -->
 
 <head>
@@ -8,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
 </head>
 	
-<body>
+<body background="images/bgtile.jpg">
 	<div id="wrapper">
 
 	<div class="header">
@@ -16,14 +17,14 @@
 		<img src="images/sitelogo.png" alt="willlogo"/>
 	
 	<div class="nav">
-				<strong>
-		<ul>
+				
+		
 
 	<div id="navpanel">
-		<li><a href="index.html">H O M E</a></li>
-		<li><a href="mods.html">M O D S</a></li>
-		<li style="color: black;">T U T O R I A L S - COMING SOON</li>
-		</strong>
+		<ul>
+		<li><a href="index.html"><strong>H O M E</strong></a></li>
+		<li><a href="mods.html"><strong>M O D S</strong></a></li>
+		<li style="color: black;"><strong>T U T O R I A L S - COMING SOON</strong></li>
 		</div>
 		</ul>
 	</div>
