--- a/index.html
+++ b/index.html
@@ -82,11 +82,12 @@
 		<div id="css-seal">
 		<p>
 			<a href="http://jigsaw.w3.org/css-validator/check/referer">
-    	<img style="border:0;width:88px;height:31px"
-        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-        alt="Valid CSS!" />
+    	<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
     	</a>
 		</p></div>
+		<div id="html-seal"><a style="text-decoration: none" href="http://validator.w3.org/check?uri=referer">
+    				<img style="border:0;width:88px;height:31px;" src="https://www.w3.org/Icons/valid-xhtml11" alt="Valid HTML!">
+    			</a></div>
 		
 		<div id="footerbanner">
 			<img src="images/footerbanner.png" alt="footbanner"/>
