--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 			
 		
 		<hr>
-		<p>Here you can find my mods, projects, and other shit.</p>
+		<p>Here you can find my modding projects, and other stuff.</p>
 		<p>This includes:</p>
         <ul>
-		<li>Shitty SHAR Mods</li>
+		<li>SHAR Mods</li>
 		<li>GTA Mods</li>
-		<li>Cleo Scripts, Tutorials (GTA)</li>
-		<li>Other shit i feel like adding</li>
+		<li>Cleo Scripts (GTA)</li>
+		<li>Maybe tutorials?</li>
 		</ul>
 		<br>
 	
 		<h1>Why have i made this site?</h1>
 		<hr>
-		<p style="text-align: center;">I like toying with HTML, and CSS a lot. So making websites I find rather fun. I made this site also to share some of my creations, i'll be posting CLEO scripts, SHAR (Simpsons Hit and Run) mods, and all kinds of cool shit. I'm also studying web development a little myself so pushing some of my creative projects into my websites i make kinda works i guess, atleast it makes the pages less empty hahaha</p>
+		<p style="text-align: center;">I enjoy messing with CSS, HTML and a bit of Javascript, i've made this site to put my creative modding projects into my websites i design and upload to github. It's something to do i suppose. I'm studying web development a little myself so my modding work helps keep the pages not empty atleast.</p>
 		<div id="css-seal">
 		<p>
 			<a href="http://jigsaw.w3.org/css-validator/check/referer">
@@ -98,7 +98,7 @@
 
 </div>
 	
-<footer>
+<!--<footer>
 	
 	<div class="footer">
 		<div class="footerContent">
@@ -107,7 +107,7 @@
 			
 		</div>
 	</div>
-</footer>
+</footer>-->
 	
 </body>
 
