--- a/mods.html
+++ b/mods.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
 </head>
 	
-<body background="images/bgtile.jpg">
+<body>
 	<div id="wrapper">
 
 	<div class="header">
