--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="content-language" content="en-gb">
-<title>Will Johnson - Digital Portfolio</title>
+
 <meta name="description" content="This is my digital portfolio a website which showcases my many skills, and hobbies and qualifications and other content.">
 <meta name="keywords" content="Will Johnson, qualifications, CV, gallery, images, about, IT, student, digital portfolio, digital, portfolio">
 
@@ -52,7 +52,7 @@
 
   <!-- LOGO -->
   <div id="logo12_1">
-   <a href="index.html"><img src="Logorev2.png" alt="WillJohnsonLOGO" id="logo12"/></a>
+   <a href="index.html"><img src="logorev2.png" alt="WillJohnsonLOGO" id="logo12"/></a>
   </div>
         
 
