--- a/mods.html
+++ b/mods.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<title>Will Johnson - Digital Portfolio</title>
+<title>Will's-Stuff - Mods and Programs</title>
 
 <meta name="viewport" content="width=device-width, inital-scale=0.1">
 <meta charset="utf-8">
